--- a/apache.conf
+++ b/apache.conf
@@ -34,4 +34,7 @@ Timeout 600
   SetEnv proxy-nokeepalive 1
   ProxyPass /distccd_stats http://127.0.0.1:3633
   ProxyPassReverse /distccd_stats http://127.0.0.1:3633
+
+  ProxyPass /piping http://127.0.0.1:8080
+  ProxyPassReverse /piping http://127.0.0.1:8080
 </VirtualHost>
